# conquer-overlay

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  esbuild.config.mjs  package-lock.json  package.json  railway.json
.github/instructions/: non-ui-engineering-focus.instructions.md  ui-skill-requirements.instructions.md
collector/: db.js  db_query_runner.js  index.js  package.json  poller.js  server.js
locales/: de.json  en.json  es.json  fr.json  pl.json
native-helper/: README.md  conquer-helper-spike.ps1
native-helper/conquer-helper/: Cargo.toml
native-helper/conquer-helper/src/: main.rs
public/: automation-buffs.html  automation-hud.html  index.html  watch-overlay.html  watch-overlay.js
public/css/: autoclicker.css  autocomplete.css  automation-buffs-entry.css  automation-buffs.css  automation-hud-entry.css  automation-hud.css  history.css  keyboard-picker.css  layout.css  listings.css  main-entry.css  minimap.css  modal.css  search.css  server-bar.css  settings.css  shared.css  variables.css  watch-overlay-entry.css  watch-overlay.css  watch.css
public/partials/: autoclicker.html  history.html  search.html  settings.html  watch.html
scripts/: before-pack.js  build.ps1  build.sh  installer-selfdelete.nsh
src/: api.js  automation-contracts.js  automation-helper-client.js  automation-service.js  hud-renderer.js  hud-window.js  main.js  preload.js  profile-store.js  renderer.js
src/main/: automation-setup.js  db-queries.js  hotkey-manager.js  ipc-handlers.js  market-client.js  state-store.js  window-manager.js
src/renderer/: autoclicker.js  i18n.js  (+19 more)
(+2 files in other folders)
