[package]
name = "conquer-helper"
version = "0.1.0"
edition = "2021"
description = "Automation helper for Conquer Market Overlay (Linux/X11)"

[[bin]]
name = "conquer-helper"
path = "src/main.rs"

[dependencies]
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code", "xtest"] }

[profile.release]
opt-level = 2
strip = true
